--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: Hana Huie
-email: hana.huie@gmail.com
+email:
 description: > # this means to ignore newlines until "baseurl:"
-  Hi there! This is the personal site of Hana Huie - student, programmer, and dancer.
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
 url: "http://hhuie.github.io" # the base hostname & protocol for your site
 twitter_username: sunshoone
